Fix landing CSS spacing bug

--- a/cypherpunk-com/landing/landing.scss
+++ b/cypherpunk-com/landing/landing.scss
@@ -235,6 +235,7 @@ html, body {
   text-align: center;
   padding: 40px 10px 20px;
   color: #fff;
+  clear: both;
 }
 
 .thanks-bottom {
@@ -260,6 +261,7 @@ html, body {
   text-align: center;
   padding: 50px 10px 0;
   color: #7ffffb;
+  clear: both;
 }
 
 .confirmation-subheader {
